--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,12 @@
 #password_input {
   -webkit-text-security: disc;
 }
+
+.particles {
+  position: fixed;
+  right: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
